--- a/pom.xml
+++ b/pom.xml
@@ -1,30 +1,28 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>com.denis</groupId>
   <artifactId>SpringSecurityApp</artifactId>
-  <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
-
+  <version>1.0-SNAPSHOT</version>
   <name>SpringSecurityApp Maven Webapp</name>
-  <url>http://www.denis.com</url>
+  <url>http://maven.apache.org</url>
 
   <properties>
-    <spring.version>4.2.0.RELEASE</spring.version>
-    <spring-security.version>4.0.2.RELEASE</spring-security.version>
-    <spring-data-jpa.version>2.1.8.RELEASE</spring-data-jpa.version>
-    <hibernate.version>4.3.11.Final</hibernate.version>
-    <hibernate-validator.version>5.2.1.Final</hibernate-validator.version>
-    <mysql-connector.version>5.1.36</mysql-connector.version>
+    <spring.version>5.1.9.RELEASE</spring.version>
+    <spring-security.version>5.1.6.RELEASE</spring-security.version>
+    <spring-data-jpa.version>2.1.10.RELEASE</spring-data-jpa.version>
+    <hibernate.version>5.4.5.Final</hibernate.version>
+    <hibernate-validator.version>6.0.17.Final</hibernate-validator.version>
+    <mysql-connector.version>8.0.17</mysql-connector.version>
     <commons-dbcp.version>1.4</commons-dbcp.version>
     <jstl.version>1.2</jstl.version>
-    <junit.version>3.8.1</junit.version>
-    <logback.version>1.1.3</logback.version>
+    <junit.version>4.8.2</junit.version>
+    <logback.version>1.2.3</logback.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
 
   <dependencies>
@@ -53,7 +51,7 @@
     </dependency>
 
     <dependency>
-      <groupId>org.hibernate</groupId>
+      <groupId>org.hibernate.validator</groupId>
       <artifactId>hibernate-validator</artifactId>
       <version>${hibernate-validator.version}</version>
     </dependency>
@@ -101,41 +99,7 @@
       <version>${logback.version}</version>
     </dependency>
   </dependencies>
-
   <build>
     <finalName>SpringSecurityApp</finalName>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-      <plugins>
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-war-plugin</artifactId>
-          <version>3.2.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
   </build>
 </project>
